<?xml version="1.0" encoding="ISO-8859-1"?>
<RelativeLayout
    android:orientation="vertical"
    android:background="@color/grey"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true">
        <TextView
            android:id="@+id/textView1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/textView2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="@string/enter_light"/>
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_title"/>
        </LinearLayout>
    <LinearLayout
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true">
    </LinearLayout>
    <requestFocus/>
    <RelativeLayout
        android:id="@+id/contextLayout"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:visibility="visible"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">
        <TableLayout
            android:id="@+id/tableLayout1"
            android:padding="25dip"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">
            <TableRow
                android:id="@+id/tableRowLight"
                android:padding="5dip"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <TextView
                    android:id="@+id/textViewLight"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="right"
                    android:textAlignment="gravity"
                    android:text="@string/light"
                    android:textSize="24sp"/>
                <TextView
                    android:id="@+id/textViewLightValue"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="24sp"
                    android:textColor="@color/red"/>
            </TableRow>
        </TableLayout>
        <ImageView
            android:id="@+id/imageView1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_bulb_on"
            android:contentDescription="@string/image_content_description"
            android:layout_marginTop="32dp"
            android:layout_below="@+id/tableLayout1"/>
        <LinearLayout
            android:id="@+id/linearLayoutButtons"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true">
            <Button
                android:id="@+id/button"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/lightonoff"
                android:onClick="switchLight" style="?android:attr/buttonStyleSmall"
                android:layout_marginRight="14dp"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
